welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : java.awt.Color
 required: String
		col=getCouleurSol();
                                 ^SlugTracking:7: error: value unary_! is not a member of java.awt.Color
		if (col = !Color.green) {
                          ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
		if (col = !Color.green) {
                        ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while (!estSurBiscuit()) {
        ^