welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var col="";
	while (!estSurBiscuit()) {
		avance();
		col=getCouleurSol();
		if (col = !Color.green) {
			recule();
			gauche();
		}
		if (estFaceMur()) {
			recule();
			gauche();
		}
	}
}        
